[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marcos.henrique", email = "wakeupmh@gmail.com" }
]
dependencies = [
    "pyaudio>=0.2.14",
    "speechrecognition>=3.10.4",
    "setuptools>=74.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"worker" = "worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
